src/App.css
/* Amiri */
@import url('https://fonts.googleapis.com/css?family=Amiri&display=swap');

/* Poppins & Quicksand */
@import url('https://fonts.googleapis.com/css?family=Poppins|Quicksand:500&display=swap');

@import url('https://fonts.googleapis.com/css?family=Red+Hat+Display&display=swap');

#root {
  height: 100vh;
}

body {
  --header-font-family: 'Amiri', serif;
  --city-font-family: 'Red Hat Display', sans-serif;
  --paragraph-font-family: 'Quicksand', sans-serif;
  --header-background-color: white;
  --background-color: white;
  background-color: var(--background-color);
  min-height: 100%
}

/* Standard Element Styling */

h1, h2, h3, h4, h5, h6 {
  font-family: var(--header-font-family);
  text-decoration: underline;
}

h4 {
  margin-bottom: 6%;
}

a {
  color: black;
  font-family: var(--header-font-family);
  text-decoration: none;
}

a:hover {
  color: black;
  text-decoration: underline;
}

a:active {
  color: rgb(70, 70, 70);
}

p {
  font-family: var(--paragraph-font-family);
  font-size: .9em;
  font-weight: 500;
}

/* Grids */

.App {
  text-align: center;
  display: grid;
  grid-template: 2fr .7fr / 25% 25% 25% 25%;
}

.Home {
  display: grid;
  background-color: black;
  grid-template:  10% 85% 5% / 10% 80% 10%;
}

.About, .Residential, .Commercial, .Services {
  display: grid;
  grid-template: auto / 5% 45% 45% 5%;
  padding-top: 4%;
}

.Contact {
  display: grid;
  grid-template: 15% 50% 50% 15% / 5% 45% 45% 5%;
  padding-top: 4%;
}

.Property-grid {
  display: grid;
  grid-template:  10% 80% 10% / 10% 80% 10%;
}

.Residential, .Commercial {
  text-align: center;
}

/* Site Layout */

.App-link {
  color: #61dafb;
}

.EB-logo {
  grid-area: 1 / 1 / 1 / 2;
  width: auto;
  height: 50%;
  margin: 20% 15% auto auto;
}

.Header {
  grid-area: 1 / 2 / 1 / 5;
  background-color: var(--header-background-color);
  font-family: var(--header-font-family);
  font-size: 200%;
  padding: 5% 0%;
  width: 100%;
  vertical-align: bottom;
}

.Header-rule {
  color: black;
  border-bottom: 1.25px black solid;
  width: 70%;
  margin: 0 auto;
}


.Header-city {
  font-size: .5em;
  font-family: var(--city-font-family);
  padding-top: 5px;
}

.nav {
  grid-area: 2 / 1 / 2 / 5;
  background-color: var(--header-background-color);
  width: 100%;
  height: auto;
  margin: auto auto 4% auto;
}

a {
  font-family: var(--city-font-family);
  font-size: 90%;
}

.nav-item  {
  font-family: var(--city-font-family);
  display: inline-block;
}

.Nav-button, .Top-level {
  text-align: center;
  font-size: 90%;
  padding: 0 1%;
  margin: auto;
  vertical-align: middle;
  font-family: var(--city-font-family);
}

.Second-level {
  margin: 0 10px;
}

.Bottom-level {
  padding-left: 10px;
  display: block;
  width: 150px;
}

.nav-link {
  padding: 0;
  font-family: var(--city-font-family);
}

/* Home Page */

.Home-carousel {
  grid-area: 1 / 1 / 4 / 4;
}

.Home-carousel-image {
  width: 200%;
}

#Home-one {
  margin-left: -35%;
}

#Home-four {
  margin-left: -47%;
}

#Home-five {
  margin-left: -15%;
}

#Home-six {
  margin-left: -90%;
}

#Home-seven {
  margin-left: -41%;
}

.carousel-indicators {
  z-index: 0;
}

/* About Page */

.About-content, .Residential-content, .Commercial-content, .Services-content {
    grid-area: 1 / 2 / 1 / 4;
    border: .5px black solid;
    background-color: var(--header-background-color);
    padding: 4%;
    margin-bottom: 20%;
}

.About-image {
  height: auto;
  width: 120px;
  display: inline;
  float: left;
  margin: 0 5% 0 0;
}

.About-text {
  display: inline;
  vertical-align: top;
  text-align: justify;
}

.About-text p {
  line-height: 1px;
}

/* Commercial and Residential Pages */

.Residential-content, .Commercial-content {
  padding: 15%;
}

.Property {
  grid-auto-flow: row;
  grid-area: 1 / 1 / 4 / 4;
  background-color: var(--header-background-color);
  margin: 3% 0;
  padding: 0% 0%;
  text-align: center;
}

.Property-links {
  text-decoration: none;
}

.Property-link a:hover {
  text-decoration: underline;
}

.Carousel {
  border: 1px solid black;
}

.Carousel-image {
  width: 100%;
  margin: 6% 0% 10% 0%;
  border-top: 1px black solid;
  border-bottom: 1px black solid;
}

/* Services Page */
.Services-content h4 {
  text-align: center;
  margin-bottom: 2%;
}

.Services-content p {
  font-size: 90%;
  margin-bottom: 2%;
}

#Services-col, #Clients-col {
  text-align: center;
}


/* Contact Page */

.Contact-content {
    grid-area: 1 / 2 / 4 / 4;
    border: .5px black solid;
    background-color: var(--header-background-color);
    padding: 6%;
    margin-bottom: 20%;
}

.Contact-header {
  vertical-align: top;
  text-align: left;
}


.Address-header {
  text-decoration: none;
}

.Address-text {
  line-height: 3px;
}

.Iframe {
  border: 1px solid black;
  border-right: 1px solid black;
  margin: auto;
}

.Phone-text {
  display: inline-block;
  text-decoration: none;
  line-height: 3px;
  float: left;
}

/* Small phones */

/* Tall phones */

@media (min-height: 750px) and (max-height: 850px) {
  .Home {
    margin-top: 12%;
  }

  .Property {
    margin-top: 10%;
  }
}

